2015-03-02  Joseph Myers  <joseph@codesourcery.com>

	[BZ #17779]
	* sysdeps/unix/sysv/linux/hppa/kernel-features.h
	[__LINUX_KERNEL_VERSION < 0x020625] (__ASSUME_PRLIMIT64):
	Undefine.
	* sysdeps/unix/sysv/linux/microblaze/kernel-features.h
	[__LINUX_KERNEL_VERSION < 0x020625] (__ASSUME_PRLIMIT64):
	Likewise.
	* sysdeps/unix/sysv/linux/sh/kernel-features.h
	[__LINUX_KERNEL_VERSION < 0x020625] (__ASSUME_PRLIMIT64):
	Likewise.

2015-03-02  Paul Pluzhnikov  <ppluzhnikov@google.com>

	[BZ #18036]
	* posix/fnmatch_loop.c (END): Detect invalid pattern.
	* posix/tst-fnmatch3.c (do_bz18036): Add test case.

2015-03-02  Andreas Schwab  <schwab@suse.de>

	* elf/Makefile ($(elf-objpfx)runtime-linker.st): Fix typo in
	variable name.

2015-03-02  Florian Weimer  <fweimer@redhat.com>

	* nis/nss_nis/nis-initgroups.c (_nss_nis_initgroups_dyn):
	Return error status.

2015-02-27  Alexandre Oliva <aoliva@redhat.com>

	[BZ #15969]
	* locale/findlocale.c (_nl_find_locale): Introduce const
	version of loc_name and drop unsafe type casts.

2015-02-27  Roland McGrath  <roland@hack.frob.com>

	* dlfcn/tststatic2.c (main): Converted to ...
	(do_test): ... this.
	(TEST_FUNCTION): New macro.
	Include test-skeleton.c.

2015-02-27  H.J. Lu  <hongjiu.lu@intel.com>

	[BZ #17711]
	* elf/Makefile (tests): Add vismain only if PIE is enabled.
	(tests-pie): Add vismain.
	(CFLAGS-vismain.c): New.
	* elf/vismain.c: Add comments for PIE requirement.

2015-02-27  Joseph Myers  <joseph@codesourcery.com>

	[BZ #18046]
	[BZ #18047]
	* sysdeps/ieee754/ldbl-128ibm/e_atanhl.c (__ieee754_atanhl): Use
	0x1p-56L as threshold for just returning the argument.
	* sysdeps/ieee754/ldbl-96/e_atanhl.c (__ieee754_atanhl): Use
	0x1p-32L as threshold for just returning the argument.
	* math/auto-libm-test-in: Add more tests of atanh.
	* math/auto-libm-test-out: Regenerated.
	* sysdeps/i386/fpu/libm-test-ulps: Update.
	* sysdeps/x86_64/fpu/libm-test-ulp: Likewise.

2015-02-27  Wilco Dijkstra  wdijkstr@arm.com
