@@ -1,3 +1,8 @@
+2015-03-02  Roland McGrath  <roland@hack.frob.com>
+
+	* sysdeps/pthread/timer_routines.c
+	(timer_free_list, thread_free_list, thread_active_list): Make static.
+
 2015-03-02  Joseph Myers  <joseph@codesourcery.com>
 
 	[BZ #17779]
